melhoria trocar de pont para OpenAI

--- a/src/main/resources/application-dev.yaml
+++ b/src/main/resources/application-dev.yaml
@@ -47,6 +47,14 @@ spring:
         bucket-name: ${AWS_S3_BUCKET_NAME}
         folder-name: ${AWS_S3_FOLDER_NAME} # usava quando a ler gemini pa os jogos
 
+  ai:
+    openai:
+      api-key: ${OPENAI_API_KEY} # Defina esta variável no seu ambiente
+      chat:
+        options:
+          model: gpt-4o-mini # O mais rápido e barato
+          temperature: 0.7
+
   flyway:
     enabled: false
     locations: classpath:db/migration
