--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <libraries-bom.version>26.54.0</libraries-bom.version>
         <mapstruct.version>1.5.5.Final</mapstruct.version>
         <springdoc.version>2.7.0</springdoc.version>
+        <spring-ai.version>1.0.0-M4</spring-ai.version>
     </properties>
 
     <dependencyManagement>
@@ -40,15 +41,17 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.ai</groupId>
+                <artifactId>spring-ai-bom</artifactId>
+                <version>1.0.0-M4</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
     <dependencies>
-        <dependency>
-            <groupId>com.google.cloud</groupId>
-            <artifactId>google-cloud-vertexai</artifactId>
-            <version>1.14.0</version>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -155,6 +158,7 @@
             <version>v3-rev20220715-2.0.0</version>
         </dependency>
 
+
         <dependency>
             <groupId>com.microsoft.graph</groupId>
             <artifactId>microsoft-graph</artifactId>
@@ -177,6 +181,12 @@
             <artifactId>telegrambots-client</artifactId>
             <version>7.10.0</version>
         </dependency>
+
+            <dependency>
+                <groupId>org.springframework.ai</groupId>
+                <artifactId>spring-ai-openai-spring-boot-starter</artifactId>
+            </dependency>
+
     </dependencies>
 
     <build>
@@ -213,4 +223,15 @@
             </plugin>
         </plugins>
     </build>
+    <repositories>
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
+
 </project>
