--- a/pom.xml
+++ b/pom.xml
@@ -187,6 +187,15 @@
                 <artifactId>spring-ai-openai-spring-boot-starter</artifactId>
             </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
