--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,18 +1,34 @@
 spring:
   application:
     name: registo-horas-service
+
   servlet:
     multipart:
       max-file-size: 10MB
       max-request-size: 10MB
+
+  # Configuração de Cache corrigida para Redis
+  cache:
+    type: redis
+  data:
+    redis:
+      host: ${SPRING_DATA_REDIS_HOST:localhost}
+      port: ${SPRING_DATA_REDIS_HOST:6379}
+      password: ${SPRING_DATA_REDIS_PASSWORD:}
+      repositories:
+        enabled: false
+      # Configuração de TTL (24 horas)
+  redis:
+    time-to-live: 86400000
+
   jackson:
     deserialization:
       fail-on-unknown-properties: false
 
-  # 1. DESATIVA o SQL init para não conflitar
   sql:
     init:
-      mode: never
+      schema-locations: classpath:schema.sql
+      mode: always
 
   datasource:
     url: ${SPRING_DATASOURCE_URL}
@@ -22,29 +38,22 @@ spring:
 
   jpa:
     hibernate:
-      # Muda para 'none' ou 'validate' se já tiveres as tabelas criadas
       ddl-auto: update
     show-sql: true
     open-in-view: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
 
-  # 2. CORREÇÃO CRÍTICA DO FLYWAY
-  # Mesmo que não o uses ativamente, se a dependência existir, ele valida o esquema.
-  flyway:
-    enabled: true
-    baseline-on-migrate: true  # OBRIGATÓRIO: Resolve o erro do log
-    locations: classpath:db/migration
-    fail-on-missing-locations: false
-
   rabbitmq:
-    host: ${SPRING_RABBITMQ_HOST}
-    port: ${SPRING_RABBITMQ_PORT}
-    username: ${SPRING_RABBITMQ_USERNAME}
-    password: ${SPRING_RABBITMQ_PASSWORD}
+    host: ${SPRING_RABBITMQ_HOST:localhost}
+    port: ${SPRING_RABBITMQ_PORT:5672}
+    username: ${SPRING_RABBITMQ_USERNAME:rabbituser}
+    password: ${SPRING_RABBITMQ_PASSWORD:rabbitpass}
 
-# Secção Cloud (Nível superior)
   cloud:
     vault:
+      host: ${VAULT_HOST:localhost}
+      port: 8200
+      scheme: http
       enabled: false
     aws:
       credentials:
@@ -55,6 +64,7 @@ spring:
       s3:
         bucket-name: ${AWS_S3_BUCKET_NAME}
         folder-name: ${AWS_S3_FOLDER_NAME}
+
   ai:
     openai:
       api-key: ${OPENAI_API_KEY}
@@ -63,12 +73,20 @@ spring:
           model: gpt-4o-mini
           temperature: 0.7
 
+  flyway:
+    enabled: false
+    locations: classpath:db/migration
+    baseline-on-migrate: false
+    baseline-version: 0
+
 logging:
   level:
     org.hibernate.orm.jdbc.bind: TRACE
     org.hibernate.SQL: DEBUG
+    org.springframework.security.web.ObservationFilterChainDecorator: ERROR
+    org.springframework.security.web.FilterChainProxy: ERROR
+    com.aneto.registo_horas_service.security.GatewayAuthFilter: ERROR
     org.flywaydb: INFO
-    org.springframework.security: ERROR
   file:
     name: logs/app.log
 
@@ -80,6 +98,9 @@ management:
   endpoint:
     health:
       show-details: always
+  health:
+    mail:
+      enabled: false
 
 server:
   port: ${PORT:8083}
@@ -94,6 +115,11 @@ springdoc:
   swagger-ui:
     path: /swagger-ui.html
     enabled: true
+    operations-sorter: method
+    tags-sorter: alpha
+    try-it-out-enabled: true
+    filter: true
+    display-request-duration: true
 
 gcp:
   project:
@@ -121,5 +147,15 @@ telegram:
 
 app:
   queries:
-    monthly-summary: "SELECT TO_CHAR(data_registo, 'YYYY-MM') AS mes_e_ano, SUM(horas_trabalhadas) AS total_horas_trabalhadas FROM registos.registos_horas rh WHERE :username IS NULL OR :username = 'all' OR rh.username = :username GROUP BY mes_e_ano ORDER BY mes_e_ano DESC"
-    user-required-vs-total-hours: "SELECT u.username, COALESCE(tp.project_name, 'Sem Projeto') as project_name, u.email, COALESCE(tp.required_hours, 0) as required_hours, COALESCE(ROUND(CAST(SUM(r.horas_trabalhadas) AS NUMERIC), 1), 0) AS Total_horas_trabalhadas, u.profile_picture_url, u.public_id, u.telegram_chat_id, u.mfa_enabled FROM auth.tb_users u LEFT JOIN registos.registos_horas r ON u.username = r.username LEFT JOIN auth.tb_projetos tp ON u.username = tp.username WHERE u.username = :username GROUP BY u.username, u.email, tp.required_hours, tp.project_name, u.profile_picture_url, u.public_id, u.telegram_chat_id, u.mfa_enabled"
+    monthly-summary: "SELECT TO_CHAR(data_registo, 'YYYY-MM') AS mes_e_ano, SUM(horas_trabalhadas) AS total_horas_trabalhadas 
+    FROM registos.registos_horas rh
+    WHERE :username IS NULL OR :username = 'all' OR rh.username = :username 
+    GROUP BY mes_e_ano ORDER BY mes_e_ano DESC"
+
+    user-required-vs-total-hours: "SELECT u.username, COALESCE(tp.project_name, 'Sem Projeto') as project_name,
+     u.email, COALESCE(tp.required_hours, 0) as required_hours, COALESCE(ROUND(CAST(SUM(r.horas_trabalhadas) AS NUMERIC), 1), 0) AS Total_horas_trabalhadas,
+      u.profile_picture_url, u.public_id, u.telegram_chat_id, u.mfa_enabled 
+      FROM auth.tb_users u LEFT JOIN registos.registos_horas r ON u.username = r.username 
+      LEFT JOIN auth.tb_projetos tp ON u.username = tp.username WHERE u.username = :username 
+      GROUP BY u.username, u.email, tp.required_hours, tp.project_name,
+        u.profile_picture_url, u.public_id, u.telegram_chat_id, u.mfa_enabled"
