--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -12,8 +12,8 @@ spring:
     type: redis
   data:
     redis:
-      host: ${SPRING_RABBITMQ_HOST:localhost}
-      port: ${SPRING_RABBITMQ_PORT:5672}
+      host: ${SPRING_DATA_REDIS_HOST:localhost}
+      port: ${SPRING_DATA_REDIS_PORT:6379}
       password: ${SPRING_DATA_REDIS_PASSWORD:}
       repositories:
         enabled: false
